--- a/src/app/(main)/articles/articles.module.scss
+++ b/src/app/(main)/articles/articles.module.scss
@@ -23,13 +23,14 @@
 }
 
 .articlesTitle {
-  @include heading-1;
+  @include font-atmosphere($font-size-5xl);
   margin: 0 0 $spacing-2xl 0;
   color: $color-text;
   text-align: center;
 
   @include mobile {
     margin: 0 0 $spacing-xl 0;
+    font-size: $font-size-3xl;
   }
 }
 
@@ -72,10 +73,8 @@
 }
 
 .naText {
-  @include heading-2;
+  @include font-anchor($font-size-2xl);
   color: $color-text-light;
-  font-weight: $font-weight-medium;
-  letter-spacing: 0.5px;
   text-transform: uppercase;
 
   @include mobile {
@@ -85,15 +84,13 @@
 
 // Articles note
 .articlesNote {
-  @include body-text;
+  @include font-information-caption;
   margin-top: $spacing-lg;
-  color: $color-text-light;
   text-align: center;
   max-width: 400px;
-  line-height: 1.5;
 
   @include mobile {
     margin-top: $spacing-md;
-    font-size: $font-size-sm;
+    font-size: $font-size-xs;
   }
 }
