--- a/src/components/ui/footer/footer.module.scss
+++ b/src/components/ui/footer/footer.module.scss
@@ -93,17 +93,15 @@
 }
 
 .footerCopyright {
-  @include body-text;
-  color: $color-text-light;
+  @include font-information-caption;
   margin: 0;
-  font-size: $font-size-xs;
   text-align: center;
   line-height: 1.3;
 
   @include mobile {
     font-size: $font-size-sm;
     margin-bottom: 0;
-    max-width: 21.875rem; // 350px = 21.875rem
+    max-width: 21.875rem;
     margin-left: auto;
     margin-right: auto;
     padding: 0 $spacing-sm;
@@ -161,11 +159,9 @@
 }
 
 .footerLink {
-  @include body-text;
+  @include font-information-label;
   color: $color-text;
   text-decoration: none;
-  font-size: $font-size-xs;
-  font-family: $font-primary;
   position: relative;
   transition: color $transition-fast;
   padding: 0;
@@ -174,7 +170,7 @@
   @include mobile {
     font-size: $font-size-sm;
     padding: $spacing-xs $spacing-sm;
-    min-width: 5rem; // 80px = 5rem
+    min-width: 5rem;
     display: inline-block;
     text-align: center;
     margin: 0;
@@ -183,8 +179,6 @@
   &:hover {
     color: $color-text-light;
   }
-
-  // Hover line effects removed
 
   @include mobile {
     &::after {
