--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -81,9 +81,17 @@ a {
   color: $color-text;
   text-decoration: none;
   transition: color $transition-fast;
+  -webkit-tap-highlight-color: transparent;
 
   &:hover {
     color: $color-text-light;
+  }
+
+  // Mobile tap feedback
+  @media (max-width: 768px) {
+    &:active {
+      opacity: 0.7;
+    }
   }
 }
 
@@ -95,6 +103,15 @@ button {
   font: inherit;
   cursor: pointer;
   outline: inherit;
+  -webkit-tap-highlight-color: transparent;
+
+  // Mobile tap feedback
+  @media (max-width: 768px) {
+    &:active {
+      opacity: 0.7;
+      transform: scale(0.98);
+    }
+  }
 }
 
 // List Styles
